HBASE-2009 [EC2] Support mapreduce
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hbase/trunk@883960 13f79535-47bb-0310-9956-ffa450edef68